--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
