--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-geocoder": "^0.5.0",
+    "react-native-get-location": "^4.0.1",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modal": "^13.0.1",
     "react-native-responsive-dimensions": "^3.1.1",
