--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.73.6",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modal": "^13.0.1",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
