--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@reduxjs/toolkit": "^2.2.1",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
@@ -24,6 +24,7 @@
     "react-native-get-location": "^4.0.1",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modal": "^13.0.1",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
